--- a/BetterSpicychat.css
+++ b/BetterSpicychat.css
@@ -1,9 +1,12 @@
 /* ==UserStyle==
 @name           BetterSpicychat
-@namespace      github.com/uliminas/stylus-spicychat.ai
-@version        1.0.0
-@description    Theme made to look like the old theme
+@namespace      https://github.com/uliminas/stylus-spicychat.ai
+@version        1.1.0
+@description    Theme made to look like the old theme with extra features
 @author         Uliminas
+@homepageURL    https://github.com/uliminas/stylus-spicychat.ai
+@updateURL      https://raw.githubusercontent.com/uliminas/stylus-spicychat.ai/refs/heads/main/BetterSpicychat.css
+@supportURL     https://github.com/uliminas/stylus-spicychat.ai/issues
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://spicychat.ai/chat/") {
@@ -18,5 +21,10 @@
     /* Text */
     em.italic {
         color: rgb(0, 200, 255) !important;
+    }
+
+    /* Advert */
+    .\[\&_iframe\]\:rounded-2xl > .w-full {
+        display: none !important;
     }
 }
