--- a/BetterSpicychat.user.css
+++ b/BetterSpicychat.user.css
@@ -1,12 +1,12 @@
 /* ==UserStyle==
 @name           BetterSpicychat
-@namespace      https://github.com/uliminas/stylus-spicychat.ai
-@version        2.0.1
-@description    Theme made to look like the old theme with extra features
+@namespace      https://github.com/uliminas/BetterSpicychat
+@version        2.0.2
+@description    A custom Stylus theme for SpicyChat, inspired by the old look but enhanced with modern styling, layout tweaks, and usability improvements.
 @author         Uliminas
-@homepageURL    https://github.com/uliminas/stylus-spicychat.ai
-@updateURL      https://raw.githubusercontent.com/uliminas/stylus-spicychat.ai/refs/heads/main/BetterSpicychat.css
-@supportURL     https://github.com/uliminas/stylus-spicychat.ai/issues
+@homepageURL    https://github.com/uliminas/BetterSpicychat
+@updateURL      https://raw.githubusercontent.com/uliminas/BetterSpicychat/refs/heads/main/BetterSpicychat.user.css
+@supportURL     https://github.com/uliminas/BetterSpicychat/issues
 @license        CC BY-NC-SA 4.0
 @preprocessor   stylus
 ==/UserStyle== */
