--- a/BetterSpicychat.user.css
+++ b/BetterSpicychat.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           BetterSpicychat
 @namespace      https://github.com/uliminas/BetterSpicychat
-@version        2.0.3
+@version        2.1.3
 @description    A custom Stylus theme for SpicyChat, inspired by the old look but enhanced with modern styling, layout tweaks, and usability improvements.
 @author         Uliminas
 @homepageURL    https://github.com/uliminas/BetterSpicychat
@@ -9,16 +9,22 @@
 @supportURL     https://github.com/uliminas/BetterSpicychat/issues
 @license        CC BY-NC-SA 4.0
 @preprocessor   stylus
+
+@var color bsc-italic-color "Italic Color" rgb(0, 200, 255)
+@var text bsc-chat-width "Chat Width" 1200px
+@var text bsc-chatbubble-padding "Chatbubble Padding" 250px
+@var color bsc-chatbubble-left "Left Chatbubble Color" rgb(25, 25, 25)
+@var color bsc-chatbubble-right "Right Chatbubble Color" rgb(13, 22, 39)
 ==/UserStyle== */
 
 :root {
-    --bsc-italic-color: rgb(0, 200, 255);
+    --bsc-italic-color: bsc-italic-color;
 
     /* chat */
-    --bsc-chat-width: 1200px;
-    --bsc-chatbubble-padding: 250px;
-    --bsc-chatbubble-left: rgb(25, 25, 25);
-    --bsc-chatbubble-right: rgb(13, 22, 39);
+    --bsc-chat-width: bsc-chat-width;
+    --bsc-chatbubble-padding: -bsc-chatbubble-padding;
+    --bsc-chatbubble-left: bsc-chatbubble-left;
+    --bsc-chatbubble-right: bsc-chatbubble-right;
 }
 
 @-moz-document url-prefix("https://spicychat.ai/chat/") {
