--- a/BetterSpicychat.user.css
+++ b/BetterSpicychat.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           BetterSpicychat
 @namespace      https://github.com/uliminas/BetterSpicychat
-@version        2.1.3
+@version        2.1.4
 @description    A custom Stylus theme for SpicyChat, inspired by the old look but enhanced with modern styling, layout tweaks, and usability improvements.
 @author         Uliminas
 @homepageURL    https://github.com/uliminas/BetterSpicychat
@@ -22,7 +22,7 @@
 
     /* chat */
     --bsc-chat-width: bsc-chat-width;
-    --bsc-chatbubble-padding: -bsc-chatbubble-padding;
+    --bsc-chatbubble-padding: bsc-chatbubble-padding;
     --bsc-chatbubble-left: bsc-chatbubble-left;
     --bsc-chatbubble-right: bsc-chatbubble-right;
 }
