--- a/BetterSpicychat.user.css
+++ b/BetterSpicychat.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           BetterSpicychat
 @namespace      https://github.com/uliminas/BetterSpicychat
-@version        2.2.4
+@version        2.2.5
 @description    A custom Stylus theme for SpicyChat, inspired by the old look but enhanced with modern styling, layout tweaks, and usability improvements.
 @author         Uliminas
 @homepageURL    https://github.com/uliminas/BetterSpicychat
@@ -65,7 +65,7 @@
         background-color: var(--bsc-chatbubble-left) !important;
         max-width: var(--bsc-chat-width) !important;
     }
-    .justify-start.items-center.bg-transparent.pb-lg.flex.w-full {
+    .justify-start.items-center.bg-transparent.mb-lg.flex.w-full {
         /* Container for Chatbubble w/o Options */
         max-width: var(--bsc-chat-width) !important;
         padding-left: 0px !important;
